--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -483,7 +483,6 @@
           "heading_title": "News Detail",
           "show_blog_image": true,
           "enable_parallax": true,
-          "image": "",
           "blog_show_author": true,
           "blog_show_date": true,
           "show_share_buttons": true
@@ -494,10 +493,9 @@
         "settings": {
           "show_blog_image": true,
           "enable_parallax": true,
-          "image": "",
           "layout": "grid",
-          "blog_show_author": true,
-          "blog_show_date": true,
+          "blog_show_author": false,
+          "blog_show_date": false,
           "show_comment_count": true
         }
       },
