Innitial uncommited changes

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -968,6 +968,100 @@
       "go-cart": {
         "type": "go-cart",
         "settings": {}
+      },
+      "product-new": {
+        "type": "product-new",
+        "settings": {
+          "buy_it_now_action": "direct_to_cart",
+          "show_cart_drawer": true,
+          "show_saved_amount": true,
+          "enable_default_variant": false,
+          "show_quantity_selector": false,
+          "show_vendor": false,
+          "enable_zoom": true,
+          "shake_effect_enable": true,
+          "readmore_enable": false,
+          "enable_progressbar_text": false,
+          "enable_timer_top_message": false,
+          "enable_progressbartimer_text": false,
+          "enable_shipping": false,
+          "show_tags": false,
+          "show_social": false,
+          "enable_timer_stg_on": "enable_timer_stg_off",
+          "enable_payment_button": true,
+          "variant_swacth": "one",
+          "swatch_option": "without_background",
+          "color_style": "round_shape",
+          "product_review": true,
+          "visitor_counter_enable": false,
+          "visitor_counter_number": "1-15",
+          "show_del_time": true,
+          "delivery_time_number": "1-3",
+          "product_description": "under_the_price",
+          "enable_sticky": false,
+          "sticky_button": "show_timer",
+          "move_badges_under_cart": false,
+          "enable_trust_badges": false,
+          "pdp_image": "shopify:\/\/shop_images\/new_img1.jpg",
+          "pdp_title": "<b>Buy any 3 Jigsaw Puzzles and<\/b> <br><span class=\"other_infos\">Get 10% Discount<\/span>",
+          "pdp_sub_title": "The discount will be applied automatically in the cart.",
+          "heading-tax": "CUSTOM TAXES",
+          "tax_title": "Will I have to pay international taxes & duties?",
+          "tax_sub_content": "<p>Your order may be subject to import duties and taxes, which are levied once a shipment reaches your country. The general amount for the duties and taxes fee is about 15 % of the dollar amount of the merchandise. However, this is just a general guideline and may vary depending on the country to which the order was shipped. You should contact your customs office for specific amounts and percentages.<\/p>\n\n<p>Unidragon cannot control and is not responsible for any duties\/taxes applied to your package. You will be responsible for paying additional charges for customs clearance. Customs policies vary widely from country to country; please contact your local customs office for further information. Note, in rare occasions custom agents may delay delivery of some packages.<\/p>\n\n<p>PLEASE PAY ATTENTION: Due to big dimensions of the package you will pay customs and import taxes. The amount of taxes depends on your country's laws. We are not responsible for them.<\/p>",
+          "title": "",
+          "sub_title": "",
+          "pdp_cta_text": "",
+          "pdp_cta_link": "",
+          "pdp_cta_text1": "",
+          "pdp_cta_link1": ""
+        }
+      },
+      "product-new-1": {
+        "type": "product-new-1",
+        "settings": {
+          "buy_it_now_action": "direct_to_cart",
+          "show_cart_drawer": true,
+          "show_saved_amount": true,
+          "enable_default_variant": false,
+          "show_quantity_selector": false,
+          "show_vendor": false,
+          "enable_zoom": true,
+          "shake_effect_enable": true,
+          "readmore_enable": false,
+          "enable_progressbar_text": false,
+          "enable_timer_top_message": false,
+          "enable_progressbartimer_text": false,
+          "enable_shipping": false,
+          "show_tags": false,
+          "show_social": false,
+          "enable_timer_stg_on": "enable_timer_stg_off",
+          "enable_payment_button": true,
+          "variant_swacth": "one",
+          "swatch_option": "without_background",
+          "color_style": "round_shape",
+          "product_review": true,
+          "visitor_counter_enable": false,
+          "visitor_counter_number": "1-15",
+          "show_del_time": true,
+          "delivery_time_number": "1-3",
+          "product_description": "under_the_price",
+          "enable_sticky": false,
+          "sticky_button": "show_timer",
+          "move_badges_under_cart": false,
+          "enable_trust_badges": false,
+          "pdp_image": "shopify:\/\/shop_images\/new_img1.jpg",
+          "pdp_title": "<b>Buy any 3 Jigsaw Puzzles and<\/b> <br><span class=\"other_infos\">Get 10% Discount<\/span>",
+          "pdp_sub_title": "The discount will be applied automatically in the cart.",
+          "heading-tax": "CUSTOM TAXES",
+          "tax_title": "Will I have to pay international taxes & duties?",
+          "tax_sub_content": "<p>Your order may be subject to import duties and taxes, which are levied once a shipment reaches your country. The general amount for the duties and taxes fee is about 15 % of the dollar amount of the merchandise. However, this is just a general guideline and may vary depending on the country to which the order was shipped. You should contact your customs office for specific amounts and percentages.<\/p>\n\n<p>Unidragon cannot control and is not responsible for any duties\/taxes applied to your package. You will be responsible for paying additional charges for customs clearance. Customs policies vary widely from country to country; please contact your local customs office for further information. Note, in rare occasions custom agents may delay delivery of some packages.<\/p>\n\n<p>PLEASE PAY ATTENTION: Due to big dimensions of the package you will pay customs and import taxes. The amount of taxes depends on your country's laws. We are not responsible for them.<\/p>",
+          "title": "",
+          "sub_title": "",
+          "pdp_cta_text": "",
+          "pdp_cta_link": "",
+          "pdp_cta_text1": "",
+          "pdp_cta_link1": ""
+        }
       }
     },
     "content_for_index": [
