--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -490,7 +490,7 @@
           "heading_title": "News Detail",
           "show_blog_image": true,
           "enable_parallax": true,
-          "image": "shopify:\/\/shop_images\/3.png",
+          "image": "shopify:\/\/shop_images\/Fox_Owl_Lion__1_3.png",
           "blog_show_author": false,
           "blog_show_date": false,
           "show_share_buttons": true
@@ -501,7 +501,7 @@
         "settings": {
           "show_blog_image": true,
           "enable_parallax": true,
-          "image": "shopify:\/\/shop_images\/3.png",
+          "image": "shopify:\/\/shop_images\/Fox_Owl_Lion__1_3.png",
           "layout": "grid",
           "blog_show_author": false,
           "blog_show_date": false,
@@ -995,11 +995,9 @@
           "product_review": true,
           "visitor_counter_enable": false,
           "visitor_counter_number": "1-15",
-          "show_del_time": true,
           "delivery_time_number": "1-3",
           "product_description": "under_the_price",
           "enable_sticky": false,
-          "sticky_button": "show_timer",
           "move_badges_under_cart": false,
           "enable_trust_badges": false,
           "pdp_image": "shopify:\/\/shop_images\/new_img1.jpg",
@@ -1042,11 +1040,9 @@
           "product_review": true,
           "visitor_counter_enable": false,
           "visitor_counter_number": "1-15",
-          "show_del_time": true,
           "delivery_time_number": "1-3",
           "product_description": "under_the_price",
           "enable_sticky": false,
-          "sticky_button": "show_timer",
           "move_badges_under_cart": false,
           "enable_trust_badges": false,
           "pdp_image": "shopify:\/\/shop_images\/new_img1.jpg",
