--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -348,7 +348,7 @@
           "enable_sticky": false,
           "sticky_button": "show_progress_bar",
           "move_badges_under_cart": false,
-          "enable_trust_badges": true,
+          "enable_trust_badges": false,
           "pdp_image": "shopify:\/\/shop_images\/new_img_a79e2b7e-362a-4eb1-85d0-a79a3dbc6454.jpg",
           "pdp_title": "<b>Buy any 3 Jigsaw Puzzles and<\/b> <br><span class=\"other_infos\">Get 10% Discount<\/span>",
           "pdp_sub_title": "The discount will be applied automatically in the cart.",
@@ -716,7 +716,7 @@
           "enable_sticky": false,
           "sticky_button": "show_progress_bar",
           "move_badges_under_cart": false,
-          "enable_trust_badges": true,
+          "enable_trust_badges": false,
           "pdp_image": "shopify:\/\/shop_images\/new_img.jpg",
           "pdp_title": "<b>Buy any 3 Jigsaw Puzzles and<\/b> <br><span class=\"other_infos\">Get 10% Discount<\/span>",
           "pdp_sub_title": "The discount will be applied automatically in the cart.",
@@ -1380,7 +1380,7 @@
             "product_description": "under_the_timer",
             "enable_sticky": true,
             "sticky_button": "show_progress_bar",
-            "enable_trust_badges": true,
+            "enable_trust_badges": false,
             "enable_trust_badges_image": "shopify:\/\/shop_images\/Booster-badges.png"
           }
         },
@@ -2095,7 +2095,7 @@
             "product_description": "under_the_timer",
             "enable_sticky": true,
             "sticky_button": "show_progress_bar",
-            "enable_trust_badges": true,
+            "enable_trust_badges": false,
             "enable_trust_badges_image": "shopify:\/\/shop_images\/Booster-badges.png"
           }
         },
@@ -2810,7 +2810,7 @@
             "product_description": "under_the_timer",
             "enable_sticky": true,
             "sticky_button": "show_progress_bar",
-            "enable_trust_badges": true,
+            "enable_trust_badges": false,
             "enable_trust_badges_image": "shopify:\/\/shop_images\/Booster-badges.png"
           }
         },
