--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -342,11 +342,9 @@
           "product_review": true,
           "visitor_counter_enable": false,
           "visitor_counter_number": "100-300",
-          "show_del_time": false,
           "delivery_time_number": "22 - 24",
           "product_description": "under_the_timer",
           "enable_sticky": false,
-          "sticky_button": "show_progress_bar",
           "move_badges_under_cart": false,
           "enable_trust_badges": false,
           "pdp_image": "shopify:\/\/shop_images\/new_img_a79e2b7e-362a-4eb1-85d0-a79a3dbc6454.jpg",
@@ -1051,6 +1049,99 @@
           "heading-tax": "CUSTOM TAXES",
           "tax_title": "Will I have to pay international taxes & duties?",
           "tax_sub_content": "<p>Your order may be subject to import duties and taxes, which are levied once a shipment reaches your country. The general amount for the duties and taxes fee is about 15 % of the dollar amount of the merchandise. However, this is just a general guideline and may vary depending on the country to which the order was shipped. You should contact your customs office for specific amounts and percentages.<\/p>\n\n<p>Unidragon cannot control and is not responsible for any duties\/taxes applied to your package. You will be responsible for paying additional charges for customs clearance. Customs policies vary widely from country to country; please contact your local customs office for further information. Note, in rare occasions custom agents may delay delivery of some packages.<\/p>\n\n<p>PLEASE PAY ATTENTION: Due to big dimensions of the package you will pay customs and import taxes. The amount of taxes depends on your country's laws. We are not responsible for them.<\/p>",
+          "title": "",
+          "sub_title": "",
+          "pdp_cta_text": "",
+          "pdp_cta_link": "",
+          "pdp_cta_text1": "",
+          "pdp_cta_link1": ""
+        }
+      },
+      "product-template-balancing": {
+        "type": "product-template-balancing",
+        "settings": {
+          "buy_it_now_action": "direct_to_checkout",
+          "show_cart_drawer": true,
+          "show_saved_amount": true,
+          "enable_default_variant": false,
+          "show_quantity_selector": false,
+          "show_vendor": false,
+          "enable_zoom": true,
+          "shake_effect_enable": true,
+          "readmore_enable": false,
+          "enable_progressbar_text": false,
+          "enable_timer_top_message": false,
+          "enable_progressbartimer_text": true,
+          "enable_shipping": false,
+          "show_tags": false,
+          "show_social": true,
+          "enable_timer_stg_on": "enable_timer_stg_on",
+          "enable_payment_button": true,
+          "variant_swacth": "one",
+          "swatch_option": "without_background",
+          "color_style": "round_shape",
+          "product_review": true,
+          "visitor_counter_enable": false,
+          "visitor_counter_number": "1-15",
+          "show_del_time": true,
+          "delivery_time_number": "1-3",
+          "product_description": "under_the_timer",
+          "enable_sticky": false,
+          "sticky_button": "show_timer",
+          "move_badges_under_cart": true,
+          "enable_trust_badges": true,
+          "pdp_title": "",
+          "pdp_sub_title": "",
+          "heading-tax": "",
+          "tax_title": "",
+          "tax_sub_content": "",
+          "title": "",
+          "sub_title": "",
+          "pdp_cta_text": "",
+          "pdp_cta_link": "",
+          "pdp_cta_text1": "",
+          "pdp_cta_link1": ""
+        }
+      },
+      "product-template-map": {
+        "type": "product-template-map",
+        "settings": {
+          "buy_it_now_action": "direct_to_checkout",
+          "show_cart_drawer": true,
+          "show_saved_amount": true,
+          "enable_default_variant": false,
+          "show_quantity_selector": false,
+          "show_vendor": false,
+          "enable_zoom": true,
+          "shake_effect_enable": true,
+          "readmore_enable": false,
+          "enable_progressbar_text": false,
+          "enable_timer_top_message": false,
+          "enable_progressbartimer_text": true,
+          "enable_shipping": false,
+          "show_tags": false,
+          "show_social": false,
+          "enable_timer_stg_on": "enable_timer_stg_on",
+          "enable_payment_button": true,
+          "variant_swacth": "one",
+          "swatch_option": "without_background",
+          "color_style": "round_shape",
+          "product_review": true,
+          "visitor_counter_enable": false,
+          "visitor_counter_number": "1-15",
+          "show_del_time": true,
+          "delivery_time_number": "1-3",
+          "product_description": "under_the_timer",
+          "enable_sticky": true,
+          "sticky_button": "show_timer",
+          "move_badges_under_cart": true,
+          "enable_trust_badges": true,
+          "pdp_image": "shopify:\/\/shop_images\/new_img_a79e2b7e-362a-4eb1-85d0-a79a3dbc6454.jpg",
+          "pdp_title": "<b>Buy any 3 Jigsaw Puzzles and<\/b> <br><span class=\"other_infos\">Get 10% Discount<\/span>",
+          "pdp_sub_title": "The discount will be applied automatically in the cart.",
+          "heading-tax": "",
+          "tax_title": "",
+          "tax_sub_content": "",
           "title": "",
           "sub_title": "",
           "pdp_cta_text": "",
