Social icon hided

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -334,7 +334,7 @@
           "enable_progressbartimer_text": true,
           "enable_shipping": false,
           "show_tags": false,
-          "show_social": true,
+          "show_social": false,
           "enable_timer_stg_on": "enable_timer_stg_off",
           "enable_payment_button": true,
           "variant_swacth": "one",
@@ -1075,7 +1075,7 @@
           "enable_progressbartimer_text": true,
           "enable_shipping": false,
           "show_tags": false,
-          "show_social": true,
+          "show_social": false,
           "enable_timer_stg_on": "enable_timer_stg_on",
           "enable_payment_button": true,
           "variant_swacth": "one",
@@ -1090,7 +1090,7 @@
           "enable_sticky": false,
           "sticky_button": "show_timer",
           "move_badges_under_cart": true,
-          "enable_trust_badges": true,
+          "enable_trust_badges": false,
           "pdp_title": "",
           "pdp_sub_title": "",
           "heading-tax": "",
@@ -1136,10 +1136,102 @@
           "enable_sticky": true,
           "sticky_button": "show_timer",
           "move_badges_under_cart": true,
-          "enable_trust_badges": true,
+          "enable_trust_badges": false,
           "pdp_image": "shopify:\/\/shop_images\/new_img_a79e2b7e-362a-4eb1-85d0-a79a3dbc6454.jpg",
           "pdp_title": "<b>Buy any 3 Jigsaw Puzzles and<\/b> <br><span class=\"other_infos\">Get 10% Discount<\/span>",
           "pdp_sub_title": "The discount will be applied automatically in the cart.",
+          "heading-tax": "",
+          "tax_title": "",
+          "tax_sub_content": "",
+          "title": "",
+          "sub_title": "",
+          "pdp_cta_text": "",
+          "pdp_cta_link": "",
+          "pdp_cta_text1": "",
+          "pdp_cta_link1": ""
+        }
+      },
+      "product-giftcart-template": {
+        "type": "product-giftcart-template",
+        "settings": {
+          "buy_it_now_action": "direct_to_cart",
+          "show_cart_drawer": false,
+          "show_saved_amount": true,
+          "enable_default_variant": false,
+          "show_quantity_selector": false,
+          "show_vendor": false,
+          "enable_zoom": true,
+          "shake_effect_enable": true,
+          "readmore_enable": false,
+          "enable_progressbar_text": false,
+          "enable_timer_top_message": false,
+          "enable_progressbartimer_text": true,
+          "enable_shipping": false,
+          "show_tags": false,
+          "show_social": false,
+          "enable_timer_stg_on": "enable_timer_stg_on",
+          "enable_payment_button": false,
+          "variant_swacth": "two",
+          "swatch_option": "without_background",
+          "color_style": "round_shape",
+          "product_review": true,
+          "visitor_counter_enable": false,
+          "visitor_counter_number": "1-15",
+          "show_del_time": true,
+          "delivery_time_number": "1-3",
+          "product_description": "under_the_price",
+          "enable_sticky": true,
+          "sticky_button": "show_timer",
+          "move_badges_under_cart": true,
+          "enable_trust_badges": false,
+          "pdp_title": "",
+          "pdp_sub_title": "",
+          "heading-tax": "",
+          "tax_title": "",
+          "tax_sub_content": "",
+          "title": "",
+          "sub_title": "",
+          "pdp_cta_text": "",
+          "pdp_cta_link": "",
+          "pdp_cta_text1": "",
+          "pdp_cta_link1": ""
+        }
+      },
+      "product-subscription-template": {
+        "type": "product-subscription-template",
+        "settings": {
+          "buy_it_now_action": "direct_to_cart",
+          "show_cart_drawer": false,
+          "show_saved_amount": true,
+          "enable_default_variant": false,
+          "show_quantity_selector": false,
+          "show_vendor": false,
+          "enable_zoom": false,
+          "shake_effect_enable": true,
+          "readmore_enable": false,
+          "enable_progressbar_text": false,
+          "enable_timer_top_message": false,
+          "enable_progressbartimer_text": true,
+          "enable_shipping": false,
+          "show_tags": false,
+          "show_social": false,
+          "enable_timer_stg_on": "enable_timer_stg_on",
+          "enable_payment_button": false,
+          "variant_swacth": "two",
+          "swatch_option": "without_background",
+          "color_style": "round_shape",
+          "product_review": true,
+          "visitor_counter_enable": false,
+          "visitor_counter_number": "1-15",
+          "show_del_time": true,
+          "delivery_time_number": "1-3",
+          "product_description": "under_the_price",
+          "enable_sticky": true,
+          "sticky_button": "show_timer",
+          "move_badges_under_cart": true,
+          "enable_trust_badges": true,
+          "pdp_title": "",
+          "pdp_sub_title": "",
           "heading-tax": "",
           "tax_title": "",
           "tax_sub_content": "",
