Innitial uncommited changes

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -1228,8 +1228,8 @@
           "product_description": "under_the_price",
           "enable_sticky": true,
           "sticky_button": "show_timer",
-          "move_badges_under_cart": true,
-          "enable_trust_badges": true,
+          "move_badges_under_cart": false,
+          "enable_trust_badges": false,
           "pdp_title": "",
           "pdp_sub_title": "",
           "heading-tax": "",
