--- a/assets/ly-config.json
+++ b/assets/ly-config.json
@@ -112,6 +112,7 @@
     "observeLinks": true,
     "observeImages": true,
     "observeCustomContents": true,
-    "linksBlacklist": []
+    "linksBlacklist": [
+    ]
   }
 }
