--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -1587,6 +1587,31 @@
               "button_text": "Go to directory"
             }
           },
+          "296dfcc3-67ca-4c51-b1f5-94443532230f": {
+            "type": "product-item",
+            "settings": {
+              "product_item": "diplodocus",
+              "product_title": "Dino Collection",
+              "product_item_text": "Bring your children joy",
+              "product_description": "<ul>\n              <li>An impressive gift for a child<\/li>\n              <li>Learn about animal diversity throughout history<\/li>\n            <\/ul>",
+              "product_image": "shopify:\/\/shop_images\/unidragon-wooden-puzzle-jigsaw-puzzle-for-kids-woosaic-dinosaurs-diplodocus-01_360x_b45a1bc2-80aa-430b-8720-cc7e9ff371ff.jpg",
+              "product_hover_image": "shopify:\/\/shop_images\/image-hover-dino-puzzle.png",
+              "button_text": "Go to directory"
+            }
+          },
+          "b32d7969-a1ad-49e8-830c-c12cef4c3044": {
+            "type": "collection",
+            "disabled": true,
+            "settings": {
+              "collection_item": "dino-collection",
+              "collection_title": "",
+              "collection_item_text": "Bring your children joy",
+              "collection_description": "<ul>\n              <li>An impressive gift for a child<\/li>\n              <li>Learn about animal diversity throughout history<\/li>\n            <\/ul>",
+              "collection_image": "shopify:\/\/shop_images\/unidragon-wooden-puzzle-jigsaw-puzzle-for-kids-woosaic-dinosaurs-diplodocus-01_360x_b45a1bc2-80aa-430b-8720-cc7e9ff371ff.jpg",
+              "collection_hover_image": "shopify:\/\/shop_images\/image-hover-dino-puzzle.png",
+              "button_text": "Go to directory"
+            }
+          },
           "524039b1-fc1d-423b-8c8b-377b03cd1e46": {
             "type": "product-item",
             "settings": {
@@ -1637,6 +1662,7 @@
           },
           "95ef7eb0-eef8-4105-b904-06848450108d": {
             "type": "product-item",
+            "disabled": true,
             "settings": {
               "product_item": "giftcard",
               "product_title": "Gift Cards",
@@ -1652,6 +1678,8 @@
           "8e53cb73-e853-45ab-bc83-43b73caa7e4a",
           "286e7868-2be8-4f0d-94fc-85dd820d7e97",
           "22786e4f-ddd8-4437-a485-f7c696e4897c",
+          "296dfcc3-67ca-4c51-b1f5-94443532230f",
+          "b32d7969-a1ad-49e8-830c-c12cef4c3044",
           "524039b1-fc1d-423b-8c8b-377b03cd1e46",
           "8050d109-e461-4f01-8b14-a74c4d729537",
           "5861f35d-b156-405e-a244-7f7dba7c8ed0",
