--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -2006,6 +2006,147 @@
           "img": "shopify:\/\/shop_images\/211122_-_black_friday__1.jpg",
           "img_width": "715px"
         }
+      },
+      "product-diplodocus-new-template": {
+        "type": "product-diplodocus-new-template",
+        "settings": {
+          "buy_it_now_action": "direct_to_cart",
+          "gift_age": "3+",
+          "gift_text": "A great gift for a child!",
+          "banner_first_bg": "shopify:\/\/shop_images\/banner-sidebar.png",
+          "number_first_bg": "shopify:\/\/shop_images\/sidebar-numbers-1.png",
+          "number_first_date": "01",
+          "number_first_text": "Get the whole family together and have a fun time",
+          "number_second_bg": "shopify:\/\/shop_images\/sidebar-numbers-2.png",
+          "number_second_date": "02",
+          "number_second_text": "Develop fine motor skills of hands, logic and thinking",
+          "number_third_bg": "shopify:\/\/shop_images\/sidebar-numbers-3.png",
+          "number_third_date": "03",
+          "number_third_text": "Clean your mind puting together fanciful shapes",
+          "number_fourth_bg": "shopify:\/\/shop_images\/sidebar-numbers-4.png",
+          "number_fourth_date": "04",
+          "number_fourth_text": "Learn about animal diversity throughout history",
+          "banner_second_bg": "shopify:\/\/shop_images\/banner-2-sidebar.png",
+          "surprise_title": "A surprise in every set",
+          "surprise_desc": "Get an extra gift and assemble your 3D dinosaur model",
+          "mounting_bg": "shopify:\/\/shop_images\/mounting-dino.png",
+          "mounting_title": "Mounting system in each puzzle set",
+          "mounting_desc": "Fix the assembled puzzle on the wall in the child's room.",
+          "dinoframe_bg": "shopify:\/\/shop_images\/dino-frame.png",
+          "dinoframe_title": "An outer frame and handy ruler in a set.",
+          "dinoframe_text": "Collect a picture easier.",
+          "habitat_title": "Every dinosaur is in its own habitat.",
+          "habitat_bg_first": "shopify:\/\/shop_images\/habitat-bg-1.png",
+          "habitat_label_first": "Coming soon",
+          "habitat_name_first": "Stegosaurus",
+          "habitat_bg_second": "shopify:\/\/shop_images\/habitat-bg-2.png",
+          "habitat_label_second": "Coming soon",
+          "habitat_name_second": "Pterodactyl",
+          "habitat_bg_third": "shopify:\/\/shop_images\/habitat-bg-3.png",
+          "habitat_label_third": "Coming soon",
+          "habitat_name_third": "Plesiosaurus",
+          "habitat_bg_fourth": "shopify:\/\/shop_images\/habitat-bg-4.png",
+          "habitat_label_fourth": "Coming soon",
+          "habitat_name_fourth": "Triceratops",
+          "habitat_bg_fifth": "shopify:\/\/shop_images\/habitat-bg-5.png",
+          "habitat_label_fifth": "Coming soon",
+          "habitat_name_fifth": "Tyrannosaurus",
+          "dinopazzle_bg": "shopify:\/\/shop_images\/dino-pazzle.png",
+          "dinopazzle_title": "Our puzzles are made of wood.",
+          "dinopazzle_text": "We care about your health.",
+          "show_cart_drawer": false,
+          "show_saved_amount": true,
+          "enable_default_variant": false,
+          "show_quantity_selector": false,
+          "show_vendor": false,
+          "enable_zoom": true,
+          "shake_effect_enable": true,
+          "readmore_enable": false,
+          "enable_progressbar_text": true,
+          "enable_shipping": false,
+          "show_tags": false,
+          "show_social": false,
+          "enable_payment_button": true,
+          "product_review": true,
+          "visitor_counter_enable": false,
+          "visitor_counter_number": "1-15",
+          "delivery_time_number": "1-3",
+          "product_description": "under_the_price",
+          "enable_sticky": false,
+          "enable_mobile_atc_button": false,
+          "move_badges_under_cart": false,
+          "enable_trust_badges": false,
+          "pdp_enable": false,
+          "pdp_enable_banner": false,
+          "pdp_title": "",
+          "pdp_sub_title": ""
+        }
+      },
+      "product-template-mandala-new": {
+        "type": "product-template-mandala-new",
+        "settings": {
+          "buy_it_now_action": "direct_to_cart",
+          "mandala_banner": "shopify:\/\/shop_images\/mandala-universe.png",
+          "mandala_title": "Mandala is your message to the Universe!",
+          "mandala_set_bg": "shopify:\/\/shop_images\/mandala-set-bg.png",
+          "mandala_set_title": "Mini mandala in Royal Set.",
+          "mandala_set_text": "Looks like a kaleidoscope that you can spin in your hand.",
+          "mandala_box_bg": "shopify:\/\/shop_images\/mandala-box.png",
+          "mandala_box_title": "Special design box of round shape complements the unique set.",
+          "mandala_feature_bg": "shopify:\/\/shop_images\/mandala-feature.png",
+          "mandala_feature_title": "An interesting feature.",
+          "mandala_feature_text": "The sidewall has an \"endless\" pattern, it has no beginning or end, the pattern is looped.",
+          "mandala_figure_first_bg": "shopify:\/\/shop_images\/mandala-picture-1.png",
+          "mandala_figure_first_title": "Meditation and relax while puzzling",
+          "mandala_figure_second_bg": "shopify:\/\/shop_images\/mandala-picture-2.png",
+          "mandala_figure_second_title": "Settle yourself for growth and success",
+          "mandala_bottom_bg": "shopify:\/\/shop_images\/mandala-bottom.png",
+          "mandala_bottom_image": "shopify:\/\/shop_images\/mandala-bottom-img.png",
+          "mandala_bottom_title": "Turn you desires to come true",
+          "show_cart_drawer": true,
+          "show_saved_amount": true,
+          "enable_default_variant": false,
+          "show_quantity_selector": false,
+          "show_vendor": false,
+          "enable_zoom": true,
+          "shake_effect_enable": true,
+          "readmore_enable": false,
+          "enable_progressbar_text": false,
+          "enable_timer_top_message": false,
+          "enable_progressbartimer_text": false,
+          "enable_shipping": false,
+          "show_tags": false,
+          "show_social": false,
+          "enable_timer_stg_on": "enable_timer_stg_off",
+          "enable_payment_button": true,
+          "variant_swacth": "two",
+          "swatch_option": "without_background",
+          "color_style": "round_shape",
+          "product_review": true,
+          "visitor_counter_enable": false,
+          "visitor_counter_number": "1-15",
+          "delivery_time_number": "1-3",
+          "product_description": "under_the_price",
+          "enable_sticky": false,
+          "enable_combo_upsell": false,
+          "combo_upsell_product": "",
+          "enable_mobile_atc_button": false,
+          "move_badges_under_cart": false,
+          "enable_trust_badges": false,
+          "pdp_enable": false,
+          "pdp_enable_banner": false,
+          "pdp_title": "",
+          "pdp_sub_title": "",
+          "heading-tax": "",
+          "tax_title": "",
+          "tax_sub_content": "",
+          "title": "",
+          "sub_title": "",
+          "pdp_cta_text": "",
+          "pdp_cta_link": "",
+          "pdp_cta_text1": "",
+          "pdp_cta_link1": ""
+        }
       }
     },
     "content_for_index": [
